syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "UserServiceProto";

import "global.proto";

package pb;

service UserService {
  // A simple RPC.
  //
  // Obtains the feature at a given position.
  //
  // A feature with an empty name is returned if there's no feature at the given
  // position.
  rpc RegisterUser(User) returns (User) {}
  rpc AddUser(User) returns (User) {}
  rpc GetUser(Id) returns (User) {}
  rpc CheckUser(Email) returns (User) {}
  // rpc UpdateUser(User) returns (User) {}
  rpc GetUsers(ListUsers) returns (UsersResponse) {}
}
// A feature names something at a given point.
//
// If a feature could not be named, the name is empty.
message User {
  // The name of the User.
  string name = 1;
  string password = 2;
  string id = 3;
  string email = 4;
  string token = 5;
  string jwt = 6;
}



message Email {
  // The name of the feature.
  string email = 1;
  string jwt = 2;
  // The point where the feature is detected.
}

message ListUsers {
  string jwt = 1;
}

message UsersResponse {
    repeated User Users = 1;
}